# website

./: .gitignore  README.md  Website.hs  about.rst  academia.markdown  better_scientific_software.markdown  bioinfPubs.markdown  bjpopray.markdown  code.lhs  contact.markdown  fixed_points.markdown  hakyll.hs  imgtrans.markdown  index.markdown  lfg.markdown  linuxPerfEvents.markdown  lsystem.markdown  melbPL2011.markdown  melbPL2013.markdown  notes.markdown  papers.markdown  personal.markdown  presentations.markdown  pure_lambda_calculus.markdown  pyray.markdown  rng_test.markdown  scientific_software_etiquette.markdown  scott_encoding.markdown  setup.py  software.markdown  sprng.markdown  thesis.markdown  variantAnnotationTools.markdown  website.cabal  writing.markdown
css/: custom.css  default.css
docs/: CNAME  MonadTransformers.lhs  activities.html  bibtex.txt  biography.html  contact.html  fun.html  funding.html  index.html  notes.html  presentations.html  publications.html  pure_lambda_calculus.txt  reading.html  reviews.html  scott_encoding.txt  software.html  students.html  teaching.html
files/: fib_class.scala  fib_closed.scala  fib_open.scala  sprng.patch.txt
templates/: activities.yaml  base.html  biography.html  biography.yaml  contact.html  contact.yaml  default.html  fun.html  funding.html  funding.html.old  funding.yaml  index.html  index.yaml  notes.html  notes.yaml  plain.html  presentations.html  presentations.yaml  publications.html  publications.yaml  reading.html  reading.yaml  reviews.html  reviews.yaml  software.html  software.yaml  students.html  (+3 more)
(+61 files in other folders)
